--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "echo \"TODO\" && exit 1",
+    "start": "npm run compile && node dist/index.js",
+    "build": "tsc --project tsconfig.json",
     "gulp": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
