--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true,
         "sourceMap": true,
+        "outDir": "./dist"
     },
     "compileOnSave": false,
     "include": [
