--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run compile && node dist/index.js",
+    "start": "node dist/index.js",
     "build": "tsc --project tsconfig.json",
-    "gulp": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "npm run build",
+    "gulp": "gulp"
   },
   "author": "",
   "license": "ISC",
