--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.0.22",
+    "axios": "^0.19.2",
     "canvas": "^2.6.1",
+    "cheerio": "^1.0.0-rc.3",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.21",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "typescript": "^3.9.6"
