--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "canvas": "^2.6.1",
     "cheerio": "^1.0.0-rc.3",
     "discord.js": "^12.2.0",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "moment": "^2.27.0"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.21",
