--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "cheerio": "^1.0.0-rc.3",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
-    "moment": "^2.27.0"
+    "moment": "^2.27.0",
+    "pg": "^8.3.3",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.21",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "sequelize-cli": "^6.2.0",
     "typescript": "^3.9.6"
   }
 }
