--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ES5",
+        "target": "ES6",
+        "module": "CommonJS",
         "lib": [
             "ES2018",
             "DOM",
