Custom command engine with many variables.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "lib": [
             "ES2018",
             "DOM",
+            "ES2020.String",
         ],
         "types": [],
         "isolatedModules": false,
