--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.14.16",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "canvas": "^2.6.1",
     "cheerio": "^1.0.0-rc.5",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "mathjs": "^9.0.0",
     "moment": "^2.29.1",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.23",
+    "@types/mathjs": "^6.0.11",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "sequelize-cli": "^6.2.0",
