--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "^0.21.1",
     "canvas": "^2.6.1",
     "cheerio": "^1.0.0-rc.5",
-    "discord.js": "^12.5.1",
+    "discord.js": "github:discordjs/discord.js",
     "dotenv": "^8.2.0",
     "mathjs": "^9.2.0",
     "moment": "^2.29.1",
@@ -26,9 +26,10 @@
   "devDependencies": {
     "@types/cheerio": "^0.22.24",
     "@types/mathjs": "^6.0.11",
+    "discord-api-types": "^0.18.1",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "sequelize-cli": "^6.2.0",
-    "typescript": "^3.9.9"
+    "typescript": "^4.2.4"
   }
 }
