--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^14.14.31",
     "axios": "^0.21.1",
     "canvas": "^2.6.1",
     "cheerio": "^1.0.0-rc.5",
-    "discord.js": "github:discordjs/discord.js#b376f31af9881b9cd3f82ac4a42a468947cce482",
+    "discord.js": "^13.0.0-dev.2d12db000f2a0a22a8919d7a63989a6e762ae335",
     "dotenv": "^8.2.0",
     "mathjs": "^9.2.0",
     "moment": "^2.29.1",
@@ -24,8 +23,10 @@
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
+    "@discordjs/voice": "^0.5.0",
     "@types/cheerio": "^0.22.24",
     "@types/mathjs": "^6.0.11",
+    "@types/node": "^15.12.4",
     "discord-api-types": "^0.18.1",
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
