--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/node": "^15.12.4",
     "discord-api-types": "^0.18.1",
     "gulp": "^4.0.2",
-    "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-typescript": "^5.0.1",
     "sequelize-cli": "^6.2.0",
     "typescript": "^4.2.4"
   }
