--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "prettier": "^2.3.2",
     "sequelize-cli": "^6.2.0",
     "typescript": "^4.2.4"
+  },
+  "engines": {
+    "node": ">=16.6.0",
+    "npm": ">=7.0.0"
   }
 }
