--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true,
         "sourceMap": true,
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "skipLibCheck": true
     },
     "compileOnSave": false,
     "include": [
