--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dotenv": "^8.2.0",
     "mathjs": "^9.2.0",
     "moment": "^2.29.1",
-    "panda-discord": "^2.2.4",
+    "panda-discord": "^2.2.5",
     "pg": "^8.5.1",
     "sequelize": "^6.5.0"
   },
@@ -34,7 +34,7 @@
     "typescript": "^4.5.4"
   },
   "engines": {
-    "node": "16.6.1",
+    "node": ">=16.6.1",
     "npm": ">=8.1.0"
   }
 }
