--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
     "singleQuote": true,
     "arrowParens": "avoid",
     "importOrder": ["^[^.]$", "^[./]"],
-    "importOrderSeparation": true
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true
 }
