--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,7 @@
     "compilerOptions": {
         "target": "ES2020",
         "module": "CommonJS",
-        "lib": [
-            "ES2018",
-            "ES2019",
-            "DOM",
-            "ES2020.String"
-        ],
+        "lib": ["ES2018", "ES2019", "DOM", "ES2020.String"],
         "types": [],
         "isolatedModules": false,
         "experimentalDecorators": true,
@@ -18,16 +13,11 @@
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
-        "suppressImplicitAnyIndexErrors": true,
         "sourceMap": true,
         "outDir": "./dist",
         "skipLibCheck": true
     },
     "compileOnSave": false,
-    "include": [
-        "./src/**/*"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+    "include": ["./src/**/*"],
+    "exclude": ["node_modules"]
 }
