--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "node dist/index.js",
         "format": "prettier --write \"src/**/*.ts\"",
         "build": "tsc --project tsconfig.json",
+        "build_nocheck": "tsc --noCheck --project tsconfig.json",
         "gulp": "gulp"
     },
     "author": "",
