--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "format": "prettier --write \"src/**/*.ts\"",
         "build": "tsc --project tsconfig.json",
         "build_nocheck": "tsc --noCheck --project tsconfig.json",
+        "build_swc": "swc src -d dist --strip-leading-paths src",
         "gulp": "gulp"
     },
     "author": "",
@@ -25,6 +26,8 @@
         "sequelize": "^6.5.0"
     },
     "devDependencies": {
+        "@swc/cli": "^0.7.8",
+        "@swc/core": "^1.14.0",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/cheerio": "^0.22.24",
         "@types/mathjs": "^6.0.11",
